--- a/front/pages/gm/bulletin-add.html
+++ b/front/pages/gm/bulletin-add.html
@@ -61,10 +61,10 @@
         </div>
       </div>
 
-      <div class="layui-form-item layui-hide" id="PopWindowEndTime">
+      <div class="layui-form-item" id="popWindowEndTime">
         <label class="layui-form-label">弹窗显示时间</label>
         <div class="layui-input-block">
-          <input type="text" name="sPopWindowEndTime" id="iEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
+          <input type="text" name="sPopWindowEndTime" id="iPopWindowEndTime" autocomplete="off" class="layui-input" lay-verify="required|datetime" lay-verType="tips">
         </div>
       </div>
 
@@ -93,6 +93,7 @@
       let okUtils = layui.okUtils;
       let okLayer = layui.okLayer;
       let laydate = layui.laydate;
+      let $ = layui.jquery;
 
       laydate.render({
         elem: "#iBeginTime", type: "datetime"
@@ -100,15 +101,17 @@
       laydate.render({
         elem: "#iEndTime", type: "datetime"
       });
+      laydate.render({
+        elem:"#iPopWindowEndTime", type:"datetime"
+      });
 
       form.on('select(type)', function(data){
-        if (data.value == 1) {
-          $('#popwindowEndTime').removeClass('layui-hide');
-          $('input[name=sPopWindowEndTime]').val('');
-          $('input[name=sPopWindowEndTime]').attr("lay-verify", "required|datatime");
-        } else {
-          $('#popwindowEndTime').addClass('layui-hide');
+        if (data.value == 0) {
+          $('#popWindowEndTime').addClass('layui-hide');
+          $('input[name=sPopWindowEndTime]').val("");
           $('input[name=sPopWindowEndTime]').attr("lay-verify", "");
+        } else {
+          $('#popWindowEndTime').removeClass('layui-hide');
         }
       });
 
@@ -117,6 +120,16 @@
 
         if (data.field.sBeginTime >= data.field.sEndTime) {
           okLayer.redCrossMsg('开始时间不能大于结束时间', function () {});
+          return false;
+        }
+
+        if (data.field.iPopWindow == 1 && data.field.sBeginTime >= data.field.sPopWindowEndTime) {
+          okLayer.redCrossMsg('开始时间不能大于弹窗显示结束时间', function () {});
+          return false;
+        }
+
+        if (data.field.sPopWindowEndTime > data.field.sEndTime) {
+          okLayer.redCrossMsg('弹窗显示结束时间不能大于结束时间', function () {});
           return false;
         }
 
