--- a/front/pages/gm/bulletin.html
+++ b/front/pages/gm/bulletin.html
@@ -54,6 +54,7 @@
               return d.iPopWindow == 1 ? '是' : '否';
             }
           },
+          { field: "sPopWindowEndTime", title: "结束时间", align: "center" },
           {
             field: "iFlag", title: "状态", align: "center", templet: function (d) {
               var ret = '';
