--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -6,7 +6,7 @@
   <title>登录</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="css/oksub.css" />
+  <link rel="stylesheet" href="/css/oksub.css" />
 </head>
 
 <body class="page-fill">
