--- a/front/pages/game/diamond-sub.html
+++ b/front/pages/game/diamond-sub.html
@@ -36,10 +36,14 @@
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
 <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.4/dayjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.4/plugin/utc.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.4/plugin/timezone.js"></script>
+
 <script>
   var zoneid;
   var roleid;
-  layui.use(["table", "okUtils", "form", "okLayer", "laydate"], function () {
+  layui.use(["table", "okUtils", "form", "okLayer", "laydate", "okCookie"], function () {
     let table = layui.table;
     let okUtils = layui.okUtils;
     let form = layui.form;
@@ -49,10 +53,14 @@
     let laydate = layui.laydate;
     okLoading.close();
 
-    let now = new Date();
-    let lastweek = new Date(now.getTime() -7*86400*1000);
-    laydate.render({elem: "#startTime", type: "datetime", value: lastweek});
-    laydate.render({elem: "#endTime", type: "datetime", value: now});
+    dayjs.extend(window.dayjs_plugin_utc);
+    dayjs.extend(window.dayjs_plugin_timezone);
+    dayjs.tz.setDefault($.cookie("timezone"));
+
+    let now = dayjs();
+    let lastweek = dayjs().subtract(7, 'day');
+    laydate.render({elem: "#startTime", type: "datetime", btns: ['clear', 'confirm'], value: lastweek.tz().format("YYYY-MM-DD HH:mm:ss")});
+    laydate.render({elem: "#endTime", type: "datetime", btns: ['clear', 'confirm'], value: now.tz().format("YYYY-MM-DD HH:mm:ss")});
 
     let zoneSelect = xmSelect.render({
       el: '#zoneSelect',
@@ -93,7 +101,7 @@
         none: '暂无相关数据',
       },
       limit: 30,
-      where: {startTime: okUtils.dateFormat(lastweek, 'yyyy-MM-dd hh:mm:ss'), endTime: okUtils.dateFormat(now, 'yyyy-MM-dd hh:mm:ss')},
+      where: {startTime: lastweek.tz().format('YYYY-MM-DD HH:mm:ss'), endTime: now.tz().format('YYYY-MM-DD HH:mm:ss')},
       page: true,
       cols: [[
         {field: "id", title: "日志id"},
