--- a/front/pages/gm/notice.html
+++ b/front/pages/gm/notice.html
@@ -185,7 +185,7 @@
 
   <script type="text/html" id="operationTpl">
     <a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
-    <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
+    <!-- <a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a> -->
   </script>
 </body>
 
