--- a/front/pages/game/chat-newest.html
+++ b/front/pages/game/chat-newest.html
@@ -138,7 +138,7 @@
               zoneStr = "私聊["+data[i].toRoleId+"]["+data[i].toRoleName+"]";
               break;
           }
-          $("#newest_chat").append('<li><p><button type="button" class="layui-btn layui-btn-xs">'+zoneStr+'</button><button type="button" class="layui-btn layui-btn-xs">'+data[i].time+'</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs">'+data[i].fromRoleName+'['+data[i].fromRoleId+']</button></p><p>'+data[i].content+'</p></li>');
+          $("#newest_chat").append('<li><p><button type="button" class="layui-btn layui-btn-xs">'+zoneStr+'</button><button type="button" class="layui-btn layui-btn-xs">'+data[i].time+'</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs">'+data[i].fromRoleName+'['+data[i].fromZoneId+'服]'+'['+data[i].fromRoleId+']</button></p><p>'+data[i].content+'</p></li>');
         }
 
 	if (tId !== -1) {
@@ -185,7 +185,7 @@
               zoneStr = "私聊["+data[i].toRoleId+"]["+data[i].toRoleName+"]";
               break;
           }
-          $("#mask_chat").append('<li><p><button type="button" class="layui-btn layui-btn-xs">'+zoneStr+'</button><button type="button" class="layui-btn layui-btn-xs">'+data[i].time+'</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs">'+data[i].fromRoleName+'['+data[i].fromRoleId+']</button></p><p>'+data[i].content.replace(data[i].dirtyWord, '<font color="red">'+data[i].dirtyWord+'</font>')+'</p></li>');
+          $("#mask_chat").append('<li><p><button type="button" class="layui-btn layui-btn-xs">'+zoneStr+'</button><button type="button" class="layui-btn layui-btn-xs">'+data[i].time+'</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs">'+data[i].fromRoleName+'['+data[i].fromZoneId+'服]'+'['+data[i].fromRoleId+']</button></p><p>'+data[i].content.replace(data[i].dirtyWord, '<font color="red">'+data[i].dirtyWord+'</font>')+'</p></li>');
         }
 
 	if (tId2 !== -1) {
