--- a/front/pages/game/chat-newest.html
+++ b/front/pages/game/chat-newest.html
@@ -113,9 +113,10 @@
 
     function clearInVisibleData(ulDom){
       let marginTop = Math.abs(parseInt(ulDom.css("margin-top")));
-      let number = Math.floor( marginTop / 68);
+      let number = Math.floor( marginTop / 63);
+      console.log(number, marginTop, ulDom, ulDom.children());
       for (let i = 0;i<number;++i){
-        ulDom.children()[i].remove();
+        ulDom.children()[0].remove();
       }
       ulDom.css("margin-top",0);
     }
@@ -157,7 +158,7 @@
 
         tId = $("#newestchat").myScroll({
           speed:20, //数值越大，速度越慢
-          rowHeight:68, //li的高度
+          rowHeight:63, //li的高度
           loop:false,
           animSpeed:3,
         });
@@ -205,7 +206,7 @@
 
         tId2 = $("#maskchat").myScroll({
           speed:20, //数值越大，速度越慢
-          rowHeight:68, //li的高度
+          rowHeight:63, //li的高度
           loop:false,
           animSpeed:3,
         });
