--- a/front/pages/game/client-err.html
+++ b/front/pages/game/client-err.html
@@ -13,9 +13,6 @@
     <div class="layui-form-item">
       <div class="layui-inline">
         <div class="layui-input-inline">
-          <div id="zoneSelect"></div>
-        </div>
-        <div class="layui-input-inline">
           <input class="layui-input" lay-verify="required" lay-verType="tips" placeholder="开始日期" autocomplete="off" id="startTime" name="startTime">
         </div>
         <div class="layui-input-inline">
@@ -44,7 +41,6 @@
     let okUtils = layui.okUtils;
     let form = layui.form;
     let okLayer = layui.okLayer;
-    let xmSelect = layui.xmSelect;
     let $ = layui.jquery;
     let laydate = layui.laydate
     okLoading.close();
@@ -58,55 +54,39 @@
     laydate.render({elem: "#startTime", type: "datetime", btns: ['clear', 'confirm'], value: lastweek.tz().format("YYYY-MM-DD HH:mm:ss")});
     laydate.render({elem: "#endTime", type: "datetime", btns: ['clear', 'confirm'], value: now.tz().format("YYYY-MM-DD HH:mm:ss")});
 
-    let zoneSelect = xmSelect.render({
-      el: '#zoneSelect',
-      name: 'zoneid',
-      prop: {
-        value: 'iZoneId',
-        name: 'sZoneName',
-      },
-      tips: '请选择一个服务器',
-      layVerify: 'required',
-      layVerType: 'tips',
-      radio: true,
-      clickClose: true,
-      model: {
-        label: {
-          type: 'block',
-          block: {
-            //是否显示删除图标
-            showIcon: false,
-          }
-        }
-      }
-    });
-
-    okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
-      zoneSelect.update({
-        data: response.data["game"],
-        initValue: [1],
-      });
-    }).fail(function (error) {
-      console.log(error);
-    });
-
     let stageTable = table.render({
       elem: "#tableId",
       url: "/api/game/client_err/err_info",
-      where: {zoneid: 1, startTime: lastweek.tz().format('YYYY-MM-DD HH:mm:ss'), endTime: now.tz().format('YYYY-MM-DD HH:mm:ss')},
+      where: {startTime: lastweek.tz().format('YYYY-MM-DD HH:mm:ss'), endTime: now.tz().format('YYYY-MM-DD HH:mm:ss')},
       data:[],
       text: {
         none: '暂无相关数据',
       },
       cols: [[
-        {field: "zond_id", title: "区服"},
-        {field: "err_info", title: "错误信息"},
         {field: "err_time", title: "报错时间"},
+        {field: "err_info", title: "报错信息"},
+        {field: "err_times", title: "报错次数"},
+        {title: "操作", width: 200, align: "center", templet: "#operationTpl", fixed: 'right'}
       ]],
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
       autoSort: false,
     });
+
+    table.on("tool(tableFilter)", function (obj) {
+      var errInfo = obj.data.err_info
+      var errTime = obj.data.err_time
+      switch (obj.event) {
+        case "detail":
+          detail();
+          break;
+      }
+    });
+
+    function detail() {
+      okLayer.open("详情","client-err-detail.html", "90%", "90%", null, function () {
+      })
+    }
 
     form.on("submit(search)", function (data) {
       stageTable.reload({
@@ -116,6 +96,11 @@
       return false;
     });
   })
+</script>
+<script type="text/html" id="operationTpl">
+  <div class="layui-btn-group">
+    <button type="button" class="layui-btn layui-btn-sm layui-btn-normal" lay-event="detail">详情</button>
+  </div>
 </script>
 </body>
 </html>
