--- a/front/pages/game/client-err-detail.html
+++ b/front/pages/game/client-err-detail.html
@@ -24,20 +24,21 @@
     let okLayer = layui.okLayer;
     let $ = layui.jquery;
     let laydate = layui.laydate;
+    okLoading.close();
 
-    let stageTable = table.render({
+    let detailTable = table.render({
       elem: "#tableId",
       url: "/api/game/client_err/err_detail",
-      where: { errInfo: parent.errInfo, errTime: parent.errTime },
+      where: { ErrInfo: parent.errInfo, ErrTime: parent.errTime },
       data:[],
       text: {
         none: '暂无相关数据',
       },
       cols: [[
-        {field: "err_time", title: "报错时间"},
-        {field: "role_id", title: "角色id"},
-        {field: "err_info", title: "报错信息"},
-        {field: "zond_id", title: "区服id"}
+        {field: "err_time", title: "报错时间", width: 150, align: "center"},
+        {field: "zone_id", title: "区服id", width: 100, align: "center"},
+        {field: "role_id", title: "角色id", width: 100, align: "center"},
+        {field: "err_info", title: "报错信息"}
       ]],
       toolbar: true,
       defaultToolbar: ['filter', 'print', 'exports'],
@@ -46,4 +47,9 @@
   })
 </script>
 </body>
+<style>
+    .layui-table-cell {
+        height:auto;
+    }
+</style>
 </html>
