修复实时聊天显示格式异常

--- a/front/pages/game/chat-newest.html
+++ b/front/pages/game/chat-newest.html
@@ -185,7 +185,7 @@
           let zoneStr = "";
           switch (data[i].type) {
             case 1:
-              zoneStr = '<button type="button" class="layui-btn layui-btn-xs">挂机['+data[i].fromZoneId+'服]</button>';
+              zoneStr = "挂机["+data[i].fromZoneId+"服]";
               break;
             case 5:
               zoneStr = "SLG["+data[i].fromMapId+"服]";
