--- a/front/pages/gm/res.html
+++ b/front/pages/gm/res.html
@@ -50,18 +50,15 @@
           case "add":
             add();
             break;
-          case "edit":
-            edit();
-            break;
-          case "batchDel":
-            batchDel();
-            break;
         }
       });
 
       table.on("tool(tableFilter)", function (obj) {
         let data = obj.data;
         switch (obj.event) {
+          case "edit":
+            edit();
+            break;
           case "del":
             del(data.id);
             break;
@@ -70,30 +67,16 @@
 
       function add() {
         okLayer.open("增加资源监控项", "res-add.html", "90%", "90%", null, function () {
-          mailTable.reload();
+          resTable.reload();
         })
       }
 
       function edit() {
-        okLayer.open("发送自定义邮件", "res-edit.html", "90%", "90%", null, function () {
-          mailTable.reload();
+        okLayer.open("编辑资源管理项", "res-edit.html", "90%", "90%", null, function () {
+          resTable.reload();
         })
       }
-
-      function batchDel() {
-        okLayer.confirm("确定要批量删除吗？", function (index) {
-          layer.close(index);
-          let idsStr = okUtils.tableBatchCheck(table);
-          if (idsStr) {
-            okUtils.ajax("/api/gm/res/del", "post", { idsStr: idsStr }, true).done(function (response) {
-              okUtils.tableSuccessMsg(response.data);
-            }).fail(function (error) {
-              console.log(error)
-            });
-          }
-        });
-      }
-
+      
       function del(id) {
         okLayer.confirm("确定要删除吗？", function () {
           okUtils.ajax("/api/gm/res/del", "post", { idsStr: id }, true).done(function (response) {
@@ -109,7 +92,6 @@
   <script type="text/html" id="toolbarTpl">
   <div class="layui-btn-container">
     <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
-    <div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
   </div>
 </script>
 
