--- a/front/pages/gm/res.html
+++ b/front/pages/gm/res.html
@@ -33,7 +33,7 @@
         toolbar: "#toolbarTpl",
         cols: [[
           { field: "iResId", title: "资源ID" },
-          { field: "sAccess", title: "获得途径" },
+          { field: "sAction", title: "获得途径" },
           { title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right' }
         ]],
         parseData: function (res) {
