--- a/front/pages/gm/res-edit.html
+++ b/front/pages/gm/res-edit.html
@@ -78,7 +78,10 @@
       });
      
       okUtils.ajax("/api/gm/res/actionlist", "get", null, false).done(function (response) {
-        action.update({data: response.data});
+        action.update({
+            data: response.data,
+            initValue: parent.editData.sAction,
+        });
       }).fail(function (error) {
         console.log(error);
       });
@@ -86,8 +89,9 @@
       //监听提交
       var param;
       form.on('submit(edit)', function (data) {
-        let actionstr = action.getValue('valueStr')
-        let param = {iResId: data.field.iResId, sAction: actionstr};
+        let actionStr = action.getValue('valueStr')
+        let actionNameStr = action.getValue('nameStr')
+        let param = {iResId: data.field.iResId, sAction: actionStr, sActionName: actionNameStr};
         okUtils.ajax("/api/gm/res/edit", "post", param, true).done(function (response) {
             okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
